--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Welcome</h1>
     <p>Hello World</p>
     <script src="feature-a.js"></script>
 
